@@ -9,8 +9,6 @@ describe "Instantiating an Array" do
   it "should ensure mandatory parameters are supplied" do
     args = {}
     lambda { BinData::Array.new(args) }.should raise_error(ArgumentError)
-    args = {:type => :int8}
-    lambda { BinData::Array.new(args) }.should raise_error(ArgumentError)
     args = {:initial_length => 3}
     lambda { BinData::Array.new(args) }.should raise_error(ArgumentError)
   end
@@ -18,6 +16,43 @@ describe "Instantiating an Array" do
   it "should fail if a given type is unknown" do
     args = {:type => :does_not_exist, :initial_length => 3}
     lambda { BinData::Array.new(args) }.should raise_error(TypeError)
+  end
+
+  it "should not allow both :initial_length and :read_until" do
+    args = {:initial_length => 3, :read_until => lambda { false } }
+    lambda { BinData::Array.new(args) }.should raise_error(ArgumentError)
+  end
+end
+
+describe "An Array with no elements" do
+  before(:each) do
+    @data = BinData::Array.new(:type => :int8)
+  end
+
+  it "should return correct length" do
+    @data.length.should be_zero
+  end
+
+  it "should return nil for the first element" do
+    @data.first.should be_nil
+  end
+
+  it "should return [] for the first n elements" do
+    @data.first(3).should eql([])
+  end
+
+  it "should return nil for the last element" do
+    @data.last.should be_nil
+  end
+
+  it "should return [] for the last n elements" do
+    @data.last(3).should eql([])
+  end
+
+  it "should append an element" do
+    @data.append(99)
+    @data.length.should eql(1)
+    @data.last.should eql(99)
   end
 end
 
@@ -29,6 +64,24 @@ describe "An Array with several elements" do
 
   it "should return a correct snapshot" do
     @data.snapshot.should eql([1, 2, 3, 4, 5])
+  end
+
+  it "should return the first element" do
+    @data.first.should eql(1)
+  end
+
+  it "should return the first n elements" do
+    @data.first(3).should eql([1, 2, 3])
+    @data.first(99).should eql([1, 2, 3, 4, 5])
+  end
+
+  it "should return the last element" do
+    @data.last.should eql(5)
+  end
+
+  it "should return the last n elements" do
+    @data.last(3).should eql([3, 4, 5])
+    @data.last(99).should eql([1, 2, 3, 4, 5])
   end
 
   it "should have correct num elements" do
@@ -97,6 +150,12 @@ describe "An Array with several elements" do
     @data.read(io)
     @data[1].should eql(8)
   end
+
+  it "should append an element" do
+    @data.append(99)
+    @data.length.should eql(6)
+    @data.last.should eql(99)
+  end
 end
 
 describe "An Array containing structs" do
@@ -117,5 +176,45 @@ describe "An Array containing structs" do
 
   it "should interate over each element" do
     @data.collect { |s| s.a }.should eql([0, 1, 2, 3, 4])
+  end
+
+  it "should be able to append elements" do
+    obj = @data.append
+    obj.a = 3
+    obj.b = 5
+
+    @data.last.a.should eql(3)
+    @data.last.b.should eql(5)
+  end
+end
+
+describe "An Array with :read_until containing +element+" do
+  before(:each) do
+    read_until = lambda { element == 5 }
+    @data = BinData::Array.new(:type => :int8, :read_until => read_until)
+  end
+
+  it "should append to an empty array" do
+    @data.append(3)
+    @data.first.should eql(3)
+  end
+
+  it "should read until the sentinel is reached" do
+    io = StringIO.new("\x01\x02\x03\x04\x05\x06\x07")
+    @data.read(io)
+    @data.length.should eql(5)
+  end
+end
+
+describe "An Array with :read_until containing +array+ and +index+" do
+  before(:each) do
+    read_until = lambda { index >=2 and array[index - 2] == 5 }
+    @data = BinData::Array.new(:type => :int8, :read_until => read_until)
+  end
+
+  it "should read until the sentinel is reached" do
+    io = StringIO.new("\x01\x02\x03\x04\x05\x06\x07\x08")
+    @data.read(io)
+    @data.length.should eql(7)
   end
 end
